# rust-forge-template

./: .gitattributes  .gitignore  .gitmessage  .reuseignore  .taplo.toml  .typos.toml  ADOPTING.md  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  COMPONENTS.md  CONTRIBUTING.md  Cargo.toml  GETTING-STARTED.md  GOTO.md  LICENSE  README.md  REUSE.toml  SECURITY.md  TRADEMARK.md  adopt.sh  bootstrap.sh  cliff.toml  clippy.toml  codecov.yml  deny.toml  install.sh  justfile  mutants.toml  release-plz.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml  macos.sample.toml  windows.sample.toml
.config/: nextest.toml
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/workflows/: auto-rerun-transient.yml  cargo-vet-refresh.yml  ci-failure-notify.yml  codeql.yml  commitlint.yml  crates-io-dry-run.yml  dependabot-actions-review.yml  dependabot-auto-merge.yml  dependabot-review.yml  nightly-canary.yml  pr-fast.yml  release-auto-trigger.yml  release-cache-warm.yml  release-plz.yml  release.yml  tier-2.yml  winget-publish.yml  winget-token-expiry-check.yml
LICENSES/: MIT.txt
crates/acmex-cli/: Cargo.toml  build.rs
crates/acmex-cli/src/: main.rs
crates/acmex-cli/tests/: cli.rs
crates/acmex-core/: Cargo.toml
crates/acmex-core/src/: lib.rs
crates/acmex-version/: Cargo.toml
crates/acmex-version/src/: lib.rs
docs/: CONTRIBUTING.md
docs/forge/: FORGE-STAMP.toml  GETTING-STARTED.md  README.md
docs/policies/: allocation_policy.md  bugs-rust-wont-catch-audit.md  bugs-rust-wont-catch-implementation.md  build_codegen_policy.md  concurrency_policy.md  dependency_policy.md  lint-posture.md  panic_policy.md  trait_policy.md
just/: adopt.just  analysis.just  analysis_ci.just  build.just  cache.just  dev.just  help.just  init.just  legal.just  packaging.just  security.just  shared.just  test.just  workflow.just
scripts/ci/: anti_pattern_gate.sh  bootstrap-github.sh  check_commit_signatures.sh  check_commit_subjects.sh  check_file_size_policy.sh  check_forge_stamp.sh  check_gates_drift.sh  check_vet_audit_discipline.sh  file_size_exceptions.txt  gates.toml  vet_bump.sh
scripts/ci-pipeline/: Cargo.toml  build.rs
scripts/ci-pipeline/src/: changelog.rs  cli.rs  context.rs  cross_check.rs  exec.rs  git_ops.rs  main.rs  phases.rs  ship.rs  version.rs  workflow.rs
scripts/ci/acmex-gen-hooks/: Cargo.toml  build.rs
scripts/ci/acmex-gen-hooks/src/: emit.rs  main.rs  manifest.rs
scripts/ci/acmex-gen-hooks/templates/: footer.sh  footer_fast.sh  preamble.sh  preamble_fast.sh
scripts/ci/acmex-gen-workflow/: Cargo.toml
scripts/ci/acmex-gen-workflow/src/: main.rs  manifest.rs  validate.rs  workflow.rs
scripts/ci/acmex-manifest-audit/: Cargo.toml
scripts/ci/acmex-manifest-audit/src/: audit.rs  main.rs  manifest.rs
scripts/hooks/: _check_vet_fmt.sh  _lint_fast.sh  _lint_pre_push.sh  claude_no_bypass.sh  commit-msg  pre-commit  pre-push  test_claude_no_bypass.sh
supply-chain/: audits.toml  config.toml
tests/fixtures/: README.md
tools/init/: Cargo.toml  OPERATOR-NOTES.md
tools/init/src/: main.rs
