# SPDX-License-Identifier: MIT OR Apache-2.0
# Copyright (c) 2026 Acmex Placeholder LLC
#
# The init-ceremony tool. Deliberately a STANDALONE crate (the empty
# [workspace] table below opts it out of the enclosing workspace) so that:
#   * it can delete itself after a successful ceremony without breaking
#     the workspace members list, and
#   * it never appears in the product build, lints, or release plumbing.
# Zero dependencies by design: the ceremony is pure string rewriting +
# filesystem walking + a few `cargo` subprocess calls.

[package]
name = "init"
description = "One-shot rename ceremony: acmex placeholder -> your project identity"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[workspace]

[dependencies]
